# Egami-skins

./: README.md  configure.ac  skin.xml  skin_default.xml
4you/: Makefile.am  README.md
4you/skin_default/countries/: Makefile.am
A4Y/: skin_default.xml
A4Y/skin_default/: Makefile.am
A4Y/skin_default/window/: Makefile.am
Atemio4You/a4you/: skin_templates.xml  skin_wizard.xml
Atemio4You/lib/enigma2/python/Components/Converter/: ConverterRotator.pyo  ExtraNumText.pyo  ServiceInfo.pyo
Atemio4You/lib/enigma2/python/Components/Renderer/: NextEpgInfo.pyo
Atemio4You/usr/lib/enigma2/python/Components/Converter/: MPServicePosition.pyo  ValueBitTest.pyo
Atemio4You/usr/lib/enigma2/python/Components/Renderer/: Watches.pyo
Atemio4You/usr/share/enigma2/a4you/: skin.xml  skin_egami_screens.xml  skin_nopanel.xml  skin_plugins.xml  skin_templates.xml  skin_wizard.xml
Atemio4You/usr/share/enigma2/a4you/fonts/: Makefile.am
EGArmyMood/usr/share/enigma2/EGArmyBlueMood/: skin.xml
KravenHD/usr/lib/enigma2/python/Components/Converter/: KravenExtraNumText.py
KravenHD/usr/lib/enigma2/python/Components/Renderer/: KravenCPULoad.py
KravenHDC/usr/lib/enigma2/python/Components/Converter/: KravenValueRange.py
KravenHDC/usr/lib/enigma2/python/Components/Renderer/: KravenRunningText.py  KravenSYSTemp.py  KravenVVolumeText.py
KravenZeroHD/usr/lib/enigma2/python/Components/Converter/: KravenClockToTextMod.py  KravenServiceInfo.py
KravenZeroHD/usr/lib/enigma2/python/Components/Renderer/: KravenEGclock.py  KravenVolumeCycle.py  KravenWatches.py  KravenXPicon.py
KravenZeroHD/usr/share/enigma2/KravenZeroHD/: skin.xml  skin_atemio4you.xml  skin_hdmu.xml  skin_openatv.xml  skin_openhdf.xml  skin_openmips.xml
MHDC/: Atemio.xml  CommonSkin.xml
Magic-HD-Night/: skin.xml
Magic-HD-Noire/: skin.xml
Magic-HD/MHDC/: CommonSkin.xml
Pingu_TM/usr/share/enigma2/Pingu_TM_Pli_V.2/: skin.xml
Pingu_TM/usr/share/enigma2/Pingu_TM_Pli_V.2_ZZ/: skin.xml
Pingu_TM_FHD/usr/share/enigma2/Pingu_EG_FullHD/: skin.xml
Pingu_TM_FHD/usr/share/enigma2/Pingu_EG_FullHD_ZZPicon/: skin.xml
a4you/: README.md  skin.xml  skin_a4you.xml  skin_a4ypanel.xml  skin_nopanel.xml  skin_plugins.xml  skin_templates.xml  skin_wizard.xml
a4you/skin_default/: skin_nopanel.xml
a4you/skin_default/icons/: Makefile.am
aDreamy/usr/lib/enigma2/python/Components/Converter/: DERefString.py
aDreamy/usr/lib/enigma2/python/Components/Renderer/: DEShowReference.py
aDreamy/usr/share/enigma2/aDreamy/: skin.xml
aDreamy/usr/share/enigma2/aDreamy/modules/: skin_a4ypanel.xml  skin_plugins.xml  skin_templates.xml  skin_wizard.xml
eDreamy/usr/lib/enigma2/python/Components/Renderer/: ZPPicon.py
eDreamy/usr/share/enigma2/eDreamy/: skin.xml
eDreamy/usr/share/enigma2/eDreamy/modules/: skin_egami_screens.xml  skin_plugins.xml  skin_wizard.xml
eDreamy/usr/share/enigma2/eDreamyZZ/: skin.xml
eDreamyFHD/usr/share/enigma2/eDreamy-FHD/: skin.xml
eDreamyFHD/usr/share/enigma2/eDreamy-FHD/modules/: skin_egami_screens.xml  skin_plugins.xml  skin_templates.xml  skin_wizard.xml
eDreamyFHD/usr/share/enigma2/eDreamy-FHD_ZZ_Mod/: skin.xml
egami-common/usr/lib/enigma2/python/Components/Converter/: CaidInfo2.py  ValueBitTest.py  (+5 more)
megaHD/: skin.xml  skin_infobar.xml
megaHD/usr/share/enigma2/MegaHD/: skin_a4y_panel.xml  skin_ext_plugins.xml  skin_templates.xml
oDreamy-FHD/: skin.xml
oDreamy-FHD/usr/share/enigma2/oDreamy-FHD/: skin.xml  teamz.xml
oDreamy-FHD/usr/share/enigma2/oDreamy-FHD/modules/: skin_plugins.xml  skin_team.xml  skin_templates.xml
skin_default/: skin_nopanel.xml  skin_plugins.xml  skin_templates.xml  skin_wizard.xml
skin_default/buttons/: Makefile.am
skin_default/dvr/: Makefile.am
skin_default/epg/: Makefile.am
skin_default/extensions/: Makefile.am
skin_default/icons/: Makefile.am
skin_default/infobar/: Makefile.am
skin_default/menu/: Makefile.am
skin_default/piconbg/: Makefile.am
(+149 files in other folders)
