SUBDIRS = buttons countries dvr epg extensions icons infobar menu piconbg window

installdir = $(datadir)/enigma2/skin_default
dist_install_DATA = \
1.png \
arrowdown.png \
arrowup.png \
bar_ber.png \
bar_snr.png \
border_eventinfo.png \
div-h.png \
div-v.png \
epg_more.png \
epg_next.png \
epg_now.png \
lcd_picon_default.png \
mute.png \
noprev.png \
picon_default.png \
position_arrow.png \
position_pointer.png \
position_pointer2.png \
progress_bg.png \
progress_big.png \
progress_small.png \
rc.png \
rcold.png \
slider_back.png \
slider.png \
skin_nopanel.xml \
skin_plugins.xml \
skin_templates.xml \
skin_wizard.xml
