installdir = $(datadir)/enigma2/skin_default/buttons

dist_install_DATA = \
blue.png \
blue20.png \
button_blue.png \
button_blue_off.png \
button_green.png \
button_green_off.png \
button_red.png \
button_red_off.png \
button_yellow.png \
button_yellow_off.png \
epg_more.png \
epg_next.png \
epg_next_on.png \
epg_now.png \
epg_now_on.png \
epg_off.png \
green-big.png \
green.png \
green20.png \
grey.png \
grey20.png \
grey20s.png \
key-blue.png \
key-green.png \
key-red.png \
key-yellow.png \
key_0.png \
key_1.png \
key_2.png \
key_3.png \
key_4.png \
key_5.png \
key_6.png \
key_7.png \
key_8.png \
key_9.png \
key_audio.png \
key_blue.png \
key_green.png \
key_help.png \
key_info.png \
key_menu.png \
key_ok.png \
key_red.png \
key_text.png \
key_tv.png \
key_yellow.png \
listselect.png \
maxbar.png \
maxbarblue.png \
menuback.png \
menuselect.png \
mp_buttons.png \
rec.png \
rec_off.png \
red-big.png \
red.png \
red20.png \
red20s.png \
repeat-off.png \
repeat-on.png \
sliderp.png \
vkey_all.png \
vkey_backspace.png \
vkey_bg.png \
vkey_clr.png \
vkey_esc.png \
vkey_icon.png \
vkey_left.png \
vkey_ok.png \
vkey_right.png \
vkey_sel.png \
vkey_shift.png \
vkey_shift_sel.png \
vkey_space.png \
vkey_text.png \
yellow.png \
yellow20.png
