installdir = /usr/share/enigma2/skin_default/epg

install_DATA = \
BorderBottom.png \
BorderLeft.png \
BorderRight.png \
BorderTop.png \
CurrentEvent.png \
CurrentService.png \
OtherEvent.png \
OtherService.png \
RecordEvent.png \
RecordingEvent.png \
SelectedBorderBottom.png \
SelectedBorderLeft.png \
SelectedBorderRight.png \
SelectedBorderTop.png \
SelectedCurrentEvent.png \
SelectedEvent.png \
SelectedInformation.png \
SelectedRecordEvent.png \
SelectedZapEvent.png \
TimeLineDate.png \
TimeLineTime.png \
ZapEvent.png \
information.png \
now_next_more.png \
now_next_more_on.png \
timeline-now-pig.png \
timeline-now.png
