installdir = $(datadir)/enigma2/skin_default/infobar

dist_install_DATA = \
16_9.png \
4_3.png \
bar_agc.png \
bar_big.png \
bar_snr.png \
cryptoff_ico.png \
crypton_ico.png \
dolby.png \
hd.png \
ico_crypt_off.png \
ico_crypt_on.png \
ico_dolby_off.png \
ico_dolby_on.png \
ico_format_16_9.png \
ico_format_4_3.png \
ico_format_hd.png \
ico_hbbtv_on.png \
ico_sub_on.png \
ico_txt_on.png \
infobar.png \
infobar2.png \
line.png \
pbar.png \
pbar1.png \
pbar_snr_agc.png \
pbar_snr_snr.png \
ttxt.png \
vol_box.png \
volbg.png
