installdir = $(datadir)/enigma2/skin_default/menu

dist_install_DATA = \
a4y.png \
backup.png \
bkdown.png \
bkmedia.png \
bkmediap.png \
bktop.png \
burn.png \
choice.png \
clock.png \
cron.png \
devices.png \
dvd.png \
hat.png \
hdmi.png \
ico_crossepg.png \
ico_mytube.png \
imdb.png \
info.png \
language.png \
mediaplayer.png \
mediashadow.png \
memory.png \
network_lan.png \
plugin.png \
power.png \
satellite.png \
scan_channel.png \
scart.png \
sd.png \
setup.png \
setup_selection.png \
speaker.png \
storage.png \
subtitle.png \
timer.png \
usb.png \
vlc.png \
web_browser.png \
wifi.png \
wizard.png
